<resources>
    <string name="app_name">SRG Low Carbon Commute</string>

    <!--menu items-->
    <string name="menu_logout">log out</string>
    <string name="menu_home">home</string>
    <string name="menu_daily_commutes">daily commutes</string>
    <string name="menu_office_stats">office stats</string>
    <string name="menu_leaderboard">leaderboard</string>
    <string name="menu_settings">settings</string>

    /<!--errors-->
    <string name="signup_error_message">Please make sure to complete all fields.</string>
    <string name="signup_error_title">Oops!</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="title_activity_new_user">NewUser</string>
    <string name="title_activity_daily_commutes">DailyCommutesActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_office_stats">OfficeStatsActivity</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>


</resources>
